# libiban

./: .gitignore  CODE_OF_CONDUCT.md  Makefile.am  Makefile.in  README.md  aclocal.m4  bootstrap  config.h.in  config.h.in~  configure  configure.ac  iban.c  iban.h  libiban  libiban-uninstalled.pc  libiban-uninstalled.sh  libiban.pc  libiban.pc.in
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
doc/: Makefile.am  Makefile.in  libiban.info  libiban.texi  stamp-vti  version.texi
