prefix=@prefix@
exec_prefix=${prefix}
bindir=@bindir@
libdir=@libdir@
includedir=@includedir@
datadir=@datadir@
mandir=@mandir@
infodir=@infodir@
pkgconfigdir = @pkgconfigdir@
docdir=${datadir}/doc/@PACKAGE@

ACLOCAL_AMFLAGS = -I m4 --install

EXTRA_DIST = libiban.texi fdl-1.3.texi gpl-3.0.texi 

info_TEXINFOS = libiban.texi
carramba_libs_TEXINFOS = fdl-1.3.texi gpl-3.0.texi


